# uv_subtest

./: README.md
nord/: pyproject.toml
nord/athena/: hello.py  pyproject.toml
nord/sigurd/: pyproject.toml
nord/sigurd/src/nord/sigurd/nodes/: Node.py
