[project]
name = "nord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["athena", "sigurd"]

[tool.uv.workspace]
members = ["athena", "sigurd"]

[tool.uv.sources]
athena = { workspace = true }
sigurd = { workspace = true }

